initial file change, add asset, update html, comment js logic

--- a/freshtab.html
+++ b/freshtab.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>New Tab</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div>
-        <h1>LOREUM IPSUM</h1>
+        <h1 id="greeting-text">LOREUM IPSUM</h1>
     </div>
-<script src="script.js"></script>
+    <div>
+        <a id="gmail-link">Google Mail</a>
+        <a id="cal-link"><img src="assets/cal.png" width="50"></a>
+    </div>
+    <h2 id="current-time"></h2>
+    <h2 id="quote"></h2>
+    <h2 id="daily-word"></h2>
+<script src="main.js"></script>gree
 </body>
 </html>
