use cookies index.js to get familiar, update readme.
# Conflicts:
#	.gitignore

--- a/freshtab.html
+++ b/freshtab.html
@@ -16,6 +16,6 @@
     <h2 id="current-time"></h2>
     <h2 id="quote"></h2>
     <h2 id="daily-word"></h2>
-<script src="main.js"></script>gree
+<script src="main.js"></script>
 </body>
 </html>
